configs do database no application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+#DATASOURCE
+spring.datasource.url=${DATASOURCE_URL:jdbc:mysql://localhost:3306/caelum_cursos?createDatabaseIfNotExist=true}
+spring.datasource.username=${DATASOURCE_USERNAME:root}
+spring.datasource.password=${DATASOURCE_PASSWORD:root}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
